###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "monorepo",
)

bazel_dep(name = "rules_oci", version = "2.2.6")
# For testing, we also recommend https://registry.bazel.build/modules/container_structure_test

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "distroless_base",
    digest = "sha256:f4a335ca209e1d2ee873102c17c389ad0142e3d5b21aee2817e9cc9c01d87d20",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
        "linux/arm/v7",
        "linux/s390x",
        "linux/ppc64le",
    ],
)
oci.pull(
    name = "distroless_debian12",
    digest = "sha256:348dac1808083ccc3366399d6db835875b4eaf7c9b694783f5a3f353c4b58a28",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
        "linux/arm/v7",
        "linux/s390x",
        "linux/ppc64le",
    ],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(
    oci,
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_base_linux_arm64_v8",
    "distroless_base_linux_arm_v7",
    "distroless_base_linux_ppc64le",
    "distroless_base_linux_s390x",
    "distroless_debian12",
    "distroless_debian12_linux_amd64",
    "distroless_debian12_linux_arm64_v8",
    "distroless_debian12_linux_arm_v7",
    "distroless_debian12_linux_ppc64le",
    "distroless_debian12_linux_s390x",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "1.8.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# renovate:
# 	datasource=python-version
# 	versioning=python
# 	depName=python
PYTHON_VERSION = "3.14"

python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
python.toolchain(
    python_version = "3.10",
)
use_repo(python, "python_3_14")
use_repo(python, "python_3_10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "aspect_rules_swc", version = "2.6.0")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.7.3")
#node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

#node.toolchain(node_version = "18.13.0")
#################################

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "@@//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_ts", version = "3.1.0")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "aspect_rules_lint", version = "1.13.0")
bazel_dep(name = "bazel_features", version = "1.39.0")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

# Synced from go.mod by //:go_version_sync.
GO_VERSION = "1.26.5"

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = GO_VERSION)
use_repo(
    go_sdk,
    "go_toolchains",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# regenerate with bazelisk mod tidy
use_repo(
    go_deps,
    "co_honnef_go_tools",
    "com_github_a_h_generate",
    "com_github_aws_aws_lambda_go",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue",
    "com_github_aws_aws_sdk_go_v2_service_cloudwatchlogs",
    "com_github_aws_aws_sdk_go_v2_service_dynamodb",
    "com_github_aws_aws_sdk_go_v2_service_kms",
    "com_github_aws_aws_sdk_go_v2_service_lambda",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_awslabs_aws_lambda_go_api_proxy",
    "com_github_bazelbuild_bazel_watcher",
    "com_github_bazelbuild_buildtools",
    "com_github_beevik_etree",
    "com_github_blang_semver_v4",
    "com_github_coreos_go_oidc",
    "com_github_deepteams_webp",
    "com_github_getkin_kin_openapi",
    "com_github_go_chi_chi_v5",
    "com_github_go_chi_cors",
    "com_github_go_delve_delve",
    "com_github_go_jose_go_jose_v4",
    "com_github_golang_protobuf",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_itchyny_gojq",
    "com_github_nyaruka_phonenumbers",
    "com_github_oapi_codegen_nethttp_middleware",
    "com_github_oapi_codegen_oapi_codegen_v2",
    "com_github_oapi_codegen_runtime",
    "com_github_sergi_go_diff",
    "com_github_tdewolff_parse_v2",
    "com_github_tebeka_selenium",
    "com_github_twilio_twilio_go",
    "com_github_xeipuuv_gojsonschema",
    "org_golang_x_image",
    "org_golang_x_sync",
    "org_golang_x_tools",
    "org_golang_x_tools_gopls",
)

bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")
bazel_dep(name = "aspect_rules_py", version = "1.0.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.6",
)
use_repo(
    llvm,
    "llvm_toolchain",
    "llvm_toolchain_llvm",
)

# renovate:
# 	datasource=git-refs
# 	versioning=git
# 	depName=https://github.com/openai/openai-openapi
# 	refs-from=master
OPENAI_OPENAPI_COMMIT = "2577b8c9a889a61c1163075c2e71e3812d80aa83"

http_archive(
    name = "com_github_openai_openai_openapi",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    integrity = "sha256-P0PkXK8DEh56Z+S7dWMwxIpVxqmuDJTBuni5ZN/cSok=",
    strip_prefix = "openai-openapi-" + OPENAI_OPENAPI_COMMIT,
    # auto-integrity
    url = "https://github.com/openai/openai-openapi/archive/" + OPENAI_OPENAPI_COMMIT + ".zip",
)

chromium_buildfile = """
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

copy_to_bin(
name = "in_bin",
srcs = [ ":binary" ],
visibility = [ "//visibility:public" ]
)

native_binary(
name = "binary",
src = "chrome-linux64/chrome",
data = glob(["**/*"], ["chrome-linux64/chrome"], allow_empty=True),
out = "chromium"
)
"""

chromium_mac_arm64_buildfile = """
load("@@//bin/host/chromium:mac_chromium.bzl", "mac_chromium")

mac_chromium(
    name = "in_bin",
    executable_src = "chrome-mac-arm64/Google Chrome for Testing.app/Contents/MacOS/Google Chrome for Testing",
    srcs = glob(["chrome-mac-arm64/Google Chrome for Testing.app/**"], allow_empty=True),
    visibility = [ "//visibility:public" ],
)
"""

chromium_mac_x64_buildfile = """
load("@@//bin/host/chromium:mac_chromium.bzl", "mac_chromium")

mac_chromium(
    name = "in_bin",
    executable_src = "chrome-mac-x64/Google Chrome for Testing.app/Contents/MacOS/Google Chrome for Testing",
    srcs = glob(["chrome-mac-x64/Google Chrome for Testing.app/**"], allow_empty=True),
    visibility = [ "//visibility:public" ],
)
"""

http_archive(
    name = "com_googleapis_storage_chromium_linux_x64",
    build_file_content = chromium_buildfile,
    sha256 = "cc8ae96ccba9010425abf2481ecdca343d53623151e0b4f2c180f58ec55b66a4",
    # auto-integrity
    url = "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/114.0.5735.90/linux64/chrome-linux64.zip",
)

http_archive(
    name = "com_googleapis_storage_chromium_mac_arm64",
    build_file_content = chromium_mac_arm64_buildfile,
    sha256 = "c30f54d81188231e8da6b06a01e5ba7fc7e7fe66d9708316a4f30f78f50d9202",
    # auto-integrity
    url = "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/114.0.5735.90/mac-arm64/chrome-mac-arm64.zip",
)

http_archive(
    name = "com_googleapis_storage_chromium_mac_x64",
    build_file_content = chromium_mac_x64_buildfile,
    sha256 = "88ec927ec591dc6d1b80efac8e0b64edb418ade96bc4086be07f7c509e00203d",
    # auto-integrity
    url = "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/114.0.5735.90/mac-x64/chrome-mac-x64.zip",
)

# renovate:
# 	datasource=git-refs
# 	versioning=git
# 	depName=https://github.com/factoriolab/factoriolab
# 	refs-from=main
FACTORIOLAB_COMMIT = "7aff56fde2b912f4812750b17d552a5facc410df"

http_archive(
    name = "com_github_factoriolab",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    integrity = "sha256-rfjX14Q+/LaxxEDtOTG91GUT/y99QXuVjhkgWsxdzls=",
    strip_prefix = "factoriolab-" + FACTORIOLAB_COMMIT,
    # auto-integrity
    url = "https://github.com/factoriolab/factoriolab/archive/" + FACTORIOLAB_COMMIT + ".zip",
)

chromedriver_buildfile = """
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

copy_to_bin(
name = "in_bin",
srcs = [ "chromedriver" ],
visibility = [ "//visibility:public" ]
)
"""

http_archive(
    name = "com_googleapis_storage_chromedriver_linux_x64",
    build_file_content = chromedriver_buildfile,
    sha256 = "a7787ef8b139170cab4abfca4a0284fd5d006bfd979624b4af25b64d583a6f44",
    url = "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip",
)

http_archive(
    name = "com_googleapis_storage_chromedriver_mac64",
    build_file_content = chromedriver_buildfile,
    sha256 = "6abdc9d358c2bc4668bef7b23048de2a9dbd3ad82cfbc6dfe322e74d4cff1650",
    url = "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_mac64.zip",
)

http_archive(
    name = "com_googleapis_storage_chromedriver_mac_arm64",
    build_file_content = chromedriver_buildfile,
    sha256 = "14eb3a1642a829fcbc11ef22e113b2f6a2340c4f4e235e5494b414c4834fa47c",
    url = "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_mac_arm64.zip",
)

http_archive(
    name = "com_googleapis_storage_chromedriver_win32",
    build_file_content = chromedriver_buildfile,
    sha256 = "14eb3a1642a829fcbc11ef22e113b2f6a2340c4f4e235e5494b414c4834fa47c",
    url = "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_mac_arm64.zip",
)

FFMPEG_LINUX_BTB_N_BUILD_TAG = "autobuild-2026-04-30-13-44"

FFMPEG_LINUX_BTB_N_VERSION = "n8.1-11-g75d37c499d"

FFMPEG_LINUX_BTB_N_RELEASE = "8.1"

ffmpeg_btbn_buildfile = """
exports_files(glob(["**/*"], allow_empty=True))

filegroup(
    name = "ffmpeg",
    srcs = ["bin/ffmpeg"],
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "ffmpeg_linux_x64",
    build_file_content = ffmpeg_btbn_buildfile,
    sha256 = "d109a9ae1e57cde858e56edf0b4e96a03c691f9817301de5c54ebb22d5f46389",
    strip_prefix = "ffmpeg-" + FFMPEG_LINUX_BTB_N_VERSION + "-linux64-gpl-" + FFMPEG_LINUX_BTB_N_RELEASE,
    # auto-integrity
    url = "https://github.com/BtbN/FFmpeg-Builds/releases/download/" + FFMPEG_LINUX_BTB_N_BUILD_TAG + "/ffmpeg-" + FFMPEG_LINUX_BTB_N_VERSION + "-linux64-gpl-" + FFMPEG_LINUX_BTB_N_RELEASE + ".tar.xz",
)

http_archive(
    name = "ffmpeg_linux_arm64",
    build_file_content = ffmpeg_btbn_buildfile,
    sha256 = "5818895223a685e33eba895f4b07046e325d0e94fb6ac734fcf5c84f4bd61827",
    strip_prefix = "ffmpeg-" + FFMPEG_LINUX_BTB_N_VERSION + "-linuxarm64-gpl-" + FFMPEG_LINUX_BTB_N_RELEASE,
    # auto-integrity
    url = "https://github.com/BtbN/FFmpeg-Builds/releases/download/" + FFMPEG_LINUX_BTB_N_BUILD_TAG + "/ffmpeg-" + FFMPEG_LINUX_BTB_N_VERSION + "-linuxarm64-gpl-" + FFMPEG_LINUX_BTB_N_RELEASE + ".tar.xz",
)

# renovate:
# 	datasource=custom.evermeet_ffmpeg_pub
# 	versioning=loose
# 	depName=ffmpeg-macos-x64
FFMPEG_MACOS_X64_VERSION = "8.1.1"

http_archive(
    name = "ffmpeg_macos_x64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "4610988e2f54c243c50da73a09e4e2c36d9bb77546f9aa6c84cb328dcb1a98c1",
    # auto-integrity
    url = "https://evermeet.cx/pub/ffmpeg/ffmpeg-" + FFMPEG_MACOS_X64_VERSION + ".zip",
)

# renovate:
# 	datasource=custom.osxexperts_ffmpeg
# 	versioning=loose
# 	depName=ffmpeg-macos-arm64
FFMPEG_MACOS_ARM64_VERSION = "8.1"

http_archive(
    name = "ffmpeg_macos_arm64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "ebb82529562b71170807bbc6b0e7eb4f0b13af8cbb0e085bb9e8f6fe709598ad",
    # auto-integrity
    url = "https://www.osxexperts.net/ffmpeg" + FFMPEG_MACOS_ARM64_VERSION.replace(".", "") + "arm.zip",
)

# Got no idea why but MS doesn't publish versions of this...
# renovate:
# 	datasource=git-refs
# 	versioning=git
# 	depName=https://github.com/microsoft/json-schemas
# 	refs-from=main
MICROSOFT_JSON_SCHEMAS_COMMIT = "cbcf4ff777a71ef494eea432f68eaefb3293cc2a"

http_archive(
    name = "microsoft_json_schemas",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "ad0bff79518c0952f1fa47d103bb66e435d6d2d30cc79b662772f34447eca603",
    strip_prefix = "json-schemas-" + MICROSOFT_JSON_SCHEMAS_COMMIT,
    # auto-integrity
    url = "https://github.com/microsoft/json-schemas/archive/" + MICROSOFT_JSON_SCHEMAS_COMMIT + ".zip",
)

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=pulumi/pulumi
PULUMI_CLI_VERSION_LINUX_X64 = "3.220.0"

http_archive(
    name = "pulumi_cli_linux_x64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "6f00c595e0c35821cd31903d7bb328a11c3c4bdad7acd59403fbb14cfcad45ff",
    # auto-integrity
    urls = [
        "https://github.com/pulumi/pulumi/releases/download/v" + PULUMI_CLI_VERSION_LINUX_X64 + "/pulumi-v" + PULUMI_CLI_VERSION_LINUX_X64 + "-linux-x64.tar.gz",
    ],
)

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=pulumi/pulumi
PULUMI_CLI_VERSION_DARWIN_ARM64 = "3.220.0"

http_archive(
    name = "pulumi_cli_darwin_arm64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "4b2e9da6f2ee17d2e8173942df16b49c1fa3be05a1aac2855e373d4ca9a75b5e",
    # auto-integrity
    urls = [
        "https://github.com/pulumi/pulumi/releases/download/v" + PULUMI_CLI_VERSION_DARWIN_ARM64 + "/pulumi-v" + PULUMI_CLI_VERSION_DARWIN_ARM64 + "-darwin-arm64.tar.gz",
    ],
)

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=pulumi/pulumi
PULUMI_CLI_VERSION_DARWIN_X64 = "3.220.0"

http_archive(
    name = "pulumi_cli_darwin_x64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "21bb2c9bdbf560cdee07c205b808b3b904159837eed6b24552c958f7b3129eee",
    # auto-integrity
    urls = [
        "https://github.com/pulumi/pulumi/releases/download/v" + PULUMI_CLI_VERSION_DARWIN_X64 + "/pulumi-v" + PULUMI_CLI_VERSION_DARWIN_X64 + "-darwin-x64.tar.gz",
    ],
)

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=pulumi/pulumi
PULUMI_CLI_VERSION_LINUX_ARM64 = "3.220.0"

http_archive(
    name = "pulumi_cli_linux_arm64",
    build_file_content = """
exports_files(glob(["**/*"], allow_empty=True))
""",
    sha256 = "2600ee0f43d8cc3756d5ba96c31864f9b246961bb7f6d8ae467ed8c270c4f66b",
    # auto-integrity
    urls = [
        "https://github.com/pulumi/pulumi/releases/download/v" + PULUMI_CLI_VERSION_LINUX_ARM64 + "/pulumi-v" + PULUMI_CLI_VERSION_LINUX_ARM64 + "-linux-arm64.tar.gz",
    ],
)

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=pulumi/pulumi
PULUMI_CLI_VERSION_WINDOWS_ARM64 = "3.220.0"

http_archive(
    name = "pulumi_cli_windows_arm64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "3235e75278f664805519699046c57368f19a99b097142d6b6dce40fdd16a456b",
    # auto-integrity
    urls = [
        "https://github.com/pulumi/pulumi/releases/download/v" + PULUMI_CLI_VERSION_WINDOWS_ARM64 + "/pulumi-v" + PULUMI_CLI_VERSION_WINDOWS_ARM64 + "-windows-arm64.zip",
    ],
)

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=pulumi/pulumi
PULUMI_CLI_VERSION_WINDOWS_X64 = "3.220.0"

http_archive(
    name = "pulumi_cli_windows_x64",
    build_file_content = """exports_files(glob(["**/*"], allow_empty=True))""",
    sha256 = "96874565920f0d7cce8cf5a6837bea5c62991c36a1f9be597272857ad28b290f",
    # auto-integrity
    urls = [
        "https://github.com/pulumi/pulumi/releases/download/v" + PULUMI_CLI_VERSION_WINDOWS_X64 + "/pulumi-v" + PULUMI_CLI_VERSION_WINDOWS_X64 + "-windows-x64.zip",
    ],
)

bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# renovate:
# 	datasource=github-tags
# 	versioning=loose
# 	depName=eggert/tz
TZ_VERSION = "2026c"

http_archive(
    name = "com_github_eggbert_tz",
    build_file_content = """
exports_files(glob(["**/*"]))""",
    integrity = "sha256-IQP4DgwAtghpAKUIV7OEeZsm08cKcQXGco1ZHpCmiq4=",
    strip_prefix = "tz-" + TZ_VERSION,
    # auto-integrity
    url = "https://github.com/eggert/tz/archive/refs/tags/" + TZ_VERSION + ".zip",
)

bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")

# renovate:
# 	datasource=github-releases
# 	versioning=rust
# 	depName=rust-lang/rust
RUST_VERSION = "1.96.1"

rust.toolchain(
    edition = "2021",
    versions = [RUST_VERSION],
)
use_repo(
    rust,
    "rust_linux_x86_64__x86_64-unknown-linux-gnu__stable_tools",
    "rust_toolchains",
)

rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    version = "nightly",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "cargo",
    cargo_lockfile = "//:Cargo.lock",
    generate_binaries = True,
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "cargo")

# Binary-only Cargo deps (e.g. ripgrep's `rg`) are managed separately as bindeps.
bindeps = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
bindeps.spec(
    artifact = "bin",
    package = "ripgrep",
    version = "=15.1.0",
)
bindeps.annotation(
    crate = "ripgrep",
    gen_all_binaries = True,
)
bindeps.from_specs(
    name = "bindeps",
    host_tools = "@rust_host_tools_nightly",
)
use_repo(bindeps, "bindeps")

###############################################################################
#                                     ruff                                    #
###############################################################################

# renovate:
# 	datasource=github-releases
# 	versioning=semver
# 	depName=astral-sh/ruff
RUFF_VERSION = "0.15.21"

# For Apple Silicon macOS
http_archive(
    name = "ruff_aarch64-apple-darwin",
    build_file_content = "exports_files(['ruff'])",
    integrity = "sha256-y0HEhpDBE9wIRw5kEDzmXKFSScbONJXTrHkrMpqD6ME=",
    strip_prefix = "ruff-aarch64-apple-darwin",
    url = "https://github.com/astral-sh/ruff/releases/download/" + RUFF_VERSION + "/ruff-aarch64-apple-darwin.tar.gz",
)

# For Intel macOS
http_archive(
    name = "ruff_x86_64-apple-darwin",
    build_file_content = "exports_files(['ruff'])",
    strip_prefix = "ruff-x86_64-apple-darwin",
    url = "https://github.com/astral-sh/ruff/releases/download/" + RUFF_VERSION + "/ruff-x86_64-apple-darwin.tar.gz",
)

# For ARM64 Linux
http_archive(
    name = "ruff_aarch64-unknown-linux-gnu",
    build_file_content = "exports_files(['ruff'])",
    strip_prefix = "ruff-aarch64-unknown-linux-gnu",
    url = "https://github.com/astral-sh/ruff/releases/download/" + RUFF_VERSION + "/ruff-aarch64-unknown-linux-gnu.tar.gz",
)

# For x64 Linux
http_archive(
    name = "ruff_x86_64-unknown-linux-gnu",
    build_file_content = "exports_files(['ruff'])",
    strip_prefix = "ruff-x86_64-unknown-linux-gnu",
    url = "https://github.com/astral-sh/ruff/releases/download/" + RUFF_VERSION + "/ruff-x86_64-unknown-linux-gnu.tar.gz",
)

# For x64 Windows (MSVC)
http_archive(
    name = "ruff_x86_64-pc-windows-msvc",
    build_file_content = "exports_files(['ruff.exe'])",
    url = "https://github.com/astral-sh/ruff/releases/download/" + RUFF_VERSION + "/ruff-x86_64-pc-windows-msvc.zip",
)

###############################################################################
#                                   sapling                                   #
###############################################################################

# renovate:
# 	datasource=github-releases
# 	versioning=loose
# 	depName=facebook/sapling
SAPLING_VERSION = "0.2.20260522-084851+1e764c94"

http_archive(
    name = "sapling_linux_amd64",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["**"], exclude = ["BUILD", "BUILD.bazel", "MODULE.bazel", "WORKSPACE", "WORKSPACE.bazel"]),
)
""",
    sha256 = "f05c5b08b914d2b2ab4788a55d2fd42f395b50d05fb284f4d120042122d77802",
    strip_prefix = "sapling-" + SAPLING_VERSION.replace("+", "-"),
    # auto-integrity
    url = "https://github.com/facebook/sapling/archive/refs/tags/" + SAPLING_VERSION + ".tar.gz",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "copybara", version = "0.0.0-20240326-6485af6")
bazel_dep(name = "rules_itest", version = "0.0.49")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_java", version = "9.3.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ["com.amazonaws:DynamoDBLocal:2.0.0"],
    exclusions = [
        # rules_jvm_external doesn't really handle these properly, and even if it did,
        # there is no linux-arm64 variant. So we build this one from source instead.
        "com.almworks.sqlite4java:libsqlite4java-linux-amd64",
        "com.almworks.sqlite4java:libsqlite4java-linux-i386",
        "io.github.ganadist.sqlite4java:libsqlite4java-osx-aarch64",
        # TODO(zbarsky): Not sure why we still need this one on Mac...
        #"com.almworks.sqlite4java:libsqlite4java-osx",
        "com.almworks.sqlite4java:sqlite4java-win32-x64",
        "com.almworks.sqlite4java:sqlite4java-win32-x86",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

# renovate:
# 	datasource=git-refs
# 	versioning=git
# 	depName=https://github.com/ganadist/sqlite4java
# 	refs-from=master
SQLITE4JAVA_COMMIT = "7b55b3eab6901a0e49d6e1129431fa92c4206c0b"

http_archive(
    name = "sqlite4java",
    build_file = "//third_party:BUILD.sqlite4java",
    integrity = "sha256-zsZtCvre6it1fzl30RBHO15j2a5fbIKCZSKS7YPgPnw=",
    strip_prefix = "sqlite4java-" + SQLITE4JAVA_COMMIT,
    # auto-integrity
    url = "https://github.com/ganadist/sqlite4java/archive/" + SQLITE4JAVA_COMMIT + ".tar.gz",
)

# renovate:
# 	datasource=git-refs
# 	versioning=git
# 	depName=https://github.com/APIs-guru/openapi-directory
# 	refs-from=main
OPENAPI_DIRECTORY_COMMIT = "f04b8d0bcd39c52e1cf3ad7a5fe744709832ae49"

http_archive(
    name = "apis.guru",
    build_file_content = """
exports_files(glob(["**/*"], allow_empty=True))
""",
    integrity = "sha256-egvf+Tr8lNNzx+WW0kc5zIr/fZPE6LdagunAz34GBqE=",
    strip_prefix = "openapi-directory-" + OPENAPI_DIRECTORY_COMMIT,
    # auto-integrity
    url = "https://github.com/APIs-guru/openapi-directory/archive/" + OPENAPI_DIRECTORY_COMMIT + ".tar.gz",
)

bazel_dep(name = "rules_shell", version = "0.6.1")
