load("@npm//:renovate/package_json.bzl", "bin")
load("//bzl:rules.bzl", "bazel_lint")
load("//yml:test.bzl", "yaml_lint_test")

exports_files(["renovate-global.json"])

bin.renovate_config_validator_test(
    name = "validate_renovate_config_test",
    args = [
        "$(location renovate-global.json)",
        "--strict",
    ],
    data = ["renovate-global.json"],
)

yaml_lint_test(
    name = "validation",
)

bazel_lint(
    name = "bazel_lint",
    srcs = ["BUILD.bazel"],
)
