"aliases for tasks so they dont get broken"

load("//bzl:rules.bzl", "bazel_lint")

alias(
    name = "gen_rust_project",
    actual = "//rs:gen_rust_project",
)

alias(
    name = "ibazel",
    actual = "//sh/bin:ibazel",
)

alias(
    name = "activate_venv",
    actual = "//:venv",
)

alias(
    name = "install_sapling_hooks",
    actual = "//.vscode/prep:prep_bin",
)

bazel_lint(
    name = "bazel_lint",
    srcs = ["BUILD.bazel"],
)
