load("@npm//:eslint/package_json.bzl", "bin")

bin.eslint_binary(
    name = "eslint",
)

sh_binary(
    name = "run_all_affected_tests",
    srcs = ["run_affected_tests.sh"],
)

sh_binary(
    name = "fix",
    srcs = ["fix.sh"],
    data = [
        ":eslint",
        "//:buildifier",
        "//css/lint",
        "@go_sdk//:bin/gofmt",
    ],
    env = {
        "FIX_CSS": "$(rootpath //css/lint)",
        "FIX_BAZEL": "$(rootpath //:buildifier)",
        "FIX_GO": "$(rootpath @go_sdk//:bin/gofmt)",
        "FIX_JS": "$(location :eslint)",
        "BAZEL_BINDIR": ".",
    },
    visibility = ["//:__subpackages__"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)
