load("@npm//:eslint/package_json.bzl", "bin")
load("//bzl:rules.bzl", "bazel_lint")

bin.eslint_binary(
    name = "eslint",
)

sh_binary(
    name = "run_all_affected_tests",
    srcs = ["run_affected_tests.sh"],
)

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "rules.bzl",
        "show_all_outputs.bzl",
    ],
)
