load("//bzl:rules.bzl", "bazel_lint")
load("//js:rules.bzl", "js_binary")
load("//ts:rules.bzl", "ts_project")

js_binary(
    name = "presubmit",
    data = [
        ":ci",
        "//sh/bin:go",
    ],
    entry_point = "presubmit.js",
    env = {
        "GO_BINARY_LOCATION": "$(rlocationpath //sh/bin:go)",
    },
)

js_binary(
    name = "postsubmit",
    data = [
        ":ci",
        "//VERSION",
        "//project/ck3/recursive-vassals:mod_zip",
        "//project/ck3/recursive-vassals:patch",
    ],
    entry_point = "postsubmit.js",
)

js_binary(
    name = "submit",
    data = [
        ":ci",
        "//VERSION",
        "//project/ck3/recursive-vassals:mod_zip",
        "//project/ck3/recursive-vassals:patch",
    ],
    entry_point = "submit.js",
)

js_binary(
    name = "rollback",
    data = [":ci"],
    entry_point = "rollback.js",
)

bazel_lint(name = "bazel_lint")

ts_project(
    name = "bazel",
    srcs = ["bazel.ts"],
    deps = ["//:node_modules/@types/node"],
)

ts_project(
    name = "bazel_test",
    srcs = ["bazel_test.ts"],
    deps = [":bazel"],
)
