load("//bzl:rules.bzl", "bazel_lint")
load("//js:rules.bzl", "js_binary")
load("//ts:rules.bzl", "jest_test", "ts_project")

jest_test(
    name = "tests",
    srcs = ["bazel_test.js"],
    deps = [":ci"],
)

js_binary(
    name = "presubmit",
    data = [
        ":ci",
        "//sh/bin:go",
    ],
    entry_point = "presubmit.js",
    env = {
        "GO_BINARY_LOCATION": "$(rlocationpath //sh/bin:go)",
    },
)

js_binary(
    name = "postsubmit",
    data = [
        ":ci",
        "//VERSION",
        "//project/ck3/recursive-vassals:mod_zip",
        "//project/ck3/recursive-vassals:patch",
    ],
    entry_point = "postsubmit.js",
)

js_binary(
    name = "submit",
    data = [
        ":ci",
        "//VERSION",
        "//project/ck3/recursive-vassals:mod_zip",
        "//project/ck3/recursive-vassals:patch",
    ],
    entry_point = "submit.js",
)

js_binary(
    name = "rollback",
    data = [":ci"],
    entry_point = "rollback.js",
)

bazel_lint(
    name = "bazel_lint",
    srcs = ["BUILD.bazel"],
)

ts_project(
    name = "bazel_ts",
    srcs = ["bazel.ts"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:node_modules/@types/node",
        "@monorepo//ts/github/actions:index_ts",
    ],
)

ts_project(
    name = "bazel_test_ts",
    srcs = ["bazel_test.ts"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:node_modules/@jest/globals",
        "//:node_modules/@types/node",
        "@monorepo//ci:bazel_ts",
    ],
)

ts_project(
    name = "postsubmit_ts",
    srcs = ["postsubmit.ts"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:node_modules/@actions/github",
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "presubmit_ts",
    srcs = ["presubmit.ts"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:node_modules/@commander-js/extra-typings",
        "//:node_modules/@types/node",
        "@monorepo//ci:bazel_ts",
        "@monorepo//ts/github/actions:index_ts",
        "@monorepo//ts/pulumi:deploy_to_staging_ts",
    ],
)

ts_project(
    name = "rollback_ts",
    srcs = ["rollback.ts"],
    visibility = ["//:__subpackages__"],
    deps = ["@monorepo//ci:submit_ts"],
)

ts_project(
    name = "submit_ts",
    srcs = ["submit.ts"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@monorepo//ts/github/actions:index_ts",
        "@monorepo//ts/pulumi:stack_ts",
    ],
)

jest_test(
    name = "bazel_test_ts_test",
    srcs = ["bazel_test.js"],
    deps = ["@monorepo//ci:tests"],
)
