load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = ["//crate_universe/private:bzl_lib"],
)

alias(
    name = "rules",
    actual = ":bzl_lib",
    deprecation = "Please use the `@rules_rust//crate_universe:bzl_lib` target instead",
)

filegroup(
    name = "resolver_srcs",
    srcs = glob(["srcs/**"]),
)
