[package]
name = "crate_universe_resolver"
version = "0.1.0-experimental"
authors = [
  "Daniel Wagner-Hall <dwagnerhall@apple.com>",
  "Romain Chossart <romainchossart@gmail.com>",
  "Gibson Fahnestock <gib@apple.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Several of these dependencies need to be compatible with the version cargo-raze is using.

anyhow = "1"
# Until https://github.com/google/cargo-raze/pull/407 is merged:
cargo-raze = { git = "https://github.com/UebelAndre/cargo-raze.git", rev = "caaf8345046eee830ea89fc04771ee117bd835eb", default-features = false }
cargo_metadata = "0.13.1"
cfg-expr = "0.7.4"
env_logger = "0.8"
hex = "0.4"
indoc = "1.0.2"
itertools = "0.10"
log = "0.4"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
structopt = "0.3"
tempfile = "3"
tera = "1.6"
toml = "0.5.6"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_cmd = "1"
maplit = "1"
predicates = "1"
spectral = "0.6"
