[package]
name = "crate_universe_resolver"
version = "0.1.0-experimental"
authors = [
    "Daniel Wagner-Hall <dwagnerhall@apple.com>",
    "Romain Chossart <romainchossart@gmail.com>",
    "Gibson Fahnestock <gib@apple.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Several of these dependencies need to be compatible with the version cargo-raze is using.

anyhow = "1"
cargo_metadata = "0.14"
# TODO: Use upstream once following changes are merged:
# https://github.com/google/cargo-raze/pull/407
# https://github.com/google/cargo-raze/pull/415
cargo-raze = { git = "https://github.com/google/cargo-raze.git", rev = "4cbe5272b0fbbb24577bc85b647b13cb9b99ce52" }
cfg-expr = "0.7.4"
env_logger = "0.8"
hex = "0.4"
indoc = "1.0.2"
itertools = "0.10"
log = "0.4"
# openssl is a transitive dep - this enables the feature to allow it to build on buildkite.
openssl = { version = "0.10", features = ["vendored"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
structopt = "0.3"
tempfile = "3"
tera = "1.6"
toml = "0.5.6"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_cmd = "1"
maplit = "1"
predicates = "1"
spectral = "0.6"
tempfile = "3.2.0"

[patch.crates-io]
# Until https://github.com/ehuss/cargo-clone-crate/pull/6 is released
cargo-clone-crate = { git = "https://github.com/ehuss/cargo-clone-crate.git", rev = "36f5e72513a26ae539d0c3bfa7b3111b9aa11c6c" }
