[workspace]
members = [
    "tools/cross_installer",
    "tools/urls_generator",
]

[package]
name = "cargo-bazel"
version = "0.4.0"
authors = [
    "Andre Brisco - andre.brisco@protonmail.com",
]
edition = "2018"

[features]
cargo = []
default = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
# TODO: https://github.com/oli-obk/cargo_metadata/issues/208
cargo_metadata = { git = "https://github.com/oli-obk/cargo_metadata.git", rev = "2d2998c859f45f544ea847f401a5f15dff432ca9" }
cargo_toml = "0.12.4"
cargo-lock = "8.0.2"
cargo-platform = "0.1.2"
cfg-expr = "0.11.0"
clap = { version = "4.0.13", features = ["derive", "env"] }
crates-index = { version = "0.18.10", default-features = false }
hex = "0.4.3"
normpath = "0.3.2"
pathdiff = "0.2.1"
regex = "1.6.0"
semver = "1.0.14"
serde = "1.0.145"
serde_json = "1.0.86"
sha2 = "0.10.6"
tempfile = "3.3.0"
tera = "1.17.1"
textwrap = "0.15.1"
toml = "0.5.9"

[dev-dependencies]
maplit = "1.0.2"
spectral = "0.6.0"
