load("//ts:rules.bzl", "jest_test", "ts_project")
load("//js:rules.bzl", "nodejs_binary", "nodejs_test")

package(default_visibility = ["//deploy:__subpackages__"])

ts_project(
    name = "release_src",
    srcs = [
        "deploy_test.ts",
        "mocks.ts",
        "program.ts",
        "release.ts",
    ],
    data = [
        "//VERSION",
        "//project/ck3/recursive-vassals:mod_zip",
        "//project/ck3/recursive-vassals:patch",
        "//ts/cmd/svgshot:npm_pkg.publish",
        "//ts/cmd/svgshot:svgshot.tgz",
        "//ts/do-sync:do-sync.tgz",
        "//ts/do-sync:npm_pkg.publish",
        "//ts/knowitwhenyouseeit:knowitwhenyouseeit.tgz",
        "//ts/knowitwhenyouseeit:npm_pkg.publish",
    ],
    deps = [
        "//ts",
        "//ts/pulumi",
        "@npm//@actions/github",
        "@npm//@bazel/runfiles",
        "@npm//@types/jest",
        "@npm//@types/node",
        "@npm//commander",
        "@npm//mime",
    ],
)

nodejs_binary(
    name = "release",
    data = [":release_src"],
    entry_point = "release.ts",
)

nodejs_test(
    name = "smoke",
    args = [
        "--dryRun",
        "true",
    ],
    data = [":release_src"],
    entry_point = "release.ts",
)

alias(
    name = "deploy",
    actual = "release",
)

jest_test(
    name = "test",
    srcs = ["deploy_test.js"],
    deps = [":release_src"],
)
